--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Run index.js Immediately</title>
-    <!-- Defer ensures the script runs after parsing the HTML -->
-    <script src="index.js" defer></script>
+    <title>Run index.js as Module</title>
+    <!-- Use type="module" for ES6 imports -->
+    <script type="module" src="index.js"></script>
 </head>
 <body>
-    <h1>Welcome! index.js will run immediately on load.</h1>
+    <h1>index.js is running as a module 🚀</h1>
 </body>
 </html>
